<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spendify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select items</string>
    <string name="category">Category name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="search">Search categories</string>
    <string name="items_add">Category name</string>
    <string name="hello_username">Chào Nguyễn Anh!</string>
    <string name="title_financial_situation">Tình hình thu chi</string>
    <string name="spinner_prompt">Tháng này</string>
    <string name="sum_of_money">Tổng số dư</string>
    <string name="this_month">Tháng này</string>
    <string name="sum_income">Tổng thu</string>
    <string name="sum_expense">Tổng chi</string>
    <string name="today">Hôm nay</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="general_setting">Cài đặt chung</string>
    <string name="dev_info">Thông tin nhà phát triển</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_vn">Tiếng Việt</string>
    <string name="language_en">English</string>
    <string name="school">Trường:</string>
    <string name="group_member">Thành viên nhóm:</string>
    <string name="teacher">Giảng viên:</string>
    <string name="subject">Môn học:</string>
    <string name="open_uni">Trường Đại học Mở TP.HCM</string>
    <string name="mobile_programming">Lập trình trên thiết bị di động</string>
    <string name="format_time">Định dạng thời gian</string>
    <string name="showed_name">Tên hiển thị</string>
    <string name="email">Email</string>
    <string name="gender">Giới tính</string>
    <string name="career">Nghề nghiệp</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="update">Cập nhật</string>
    <string name="data_setting">Cài đặt dữ liệu</string>
    <string name="edit_info">Chỉnh sửa thông tin</string>
    <string name="user">Người dùng</string>
    <string name="date">Ngày</string>
    <string name="month">Tháng</string>
    <string name="custom_time">Tùy chọn</string>
    <string name="yesterday">Hôm qua</string>
    <string name="another_day">Ngày khác</string>
    <string name="past_month">Tháng trước</string>
    <string name="another_month">Tháng khác</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="manage_user">Quản lý người dùng</string>
    <string name="edit_user">Chỉnh sửa người dùng</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string-array name="list_items">
        <item>Expense</item>
        <item>Balance</item>
        <item>Income</item>
    </string-array>
    <string-array name="spinner_statistic_items">
        <item>Hôm nay</item>
        <item>Tuần này</item>
        <item>Tháng này</item>
        <item>Năm nay</item>
    </string-array>
    <string-array name="languages">
        <item>Tiếng Việt</item>
        <item>English</item>
    </string-array>
    <string name="fullname">Họ và tên</string>
    <string name="ten">Tên</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="desciption">Diễn giải</string>
    <string name="oveview">Tổng quan</string>
    <string name="wallet">Ví</string>
    <string name="add">Thêm</string>
    <string name="category_2">Danh mục</string>
    <string name="account">Tài khoản</string>
    <string name="sum_money">Tổng tiền:</string>
    <string name="cash">Tiền mặt:</string>
    <string name="account_name">Tên tài khoản</string>
    <string name="description_2">Diễn giải</string>
    <string name="delete">Xóa</string>
    <string name="save">Lưu</string>
    <string name="account_type">Loại tài khoản</string>
    <string name="edit_wallet">Chỉnh sửa ví</string>
    <string name="transaction">Giao dịch</string>
    <string name="amount_money">Số tiền</string>
    <string name="choose_category">Chọn hạng mục</string>
    <string name="choose_wallet">Chọn loại ví</string>
    <string name="category_3">Hạng mục thu chi</string>
    <string name="income">MỤC THU</string>
    <string name="expense">MỤC CHI</string>
    <string name="spendify">Spendify</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="already_account">Bạn đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="press_again_to_exit">Ấn lần nữa để thoát</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="create_wallet">Tạo ví</string>
    <string name="init_balance">Số dư ban đầu</string>
    <string name="password_text">Mật khẩu phải có ít nhất 8 ký tự.</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="setting">Cài đặt</string>
    <string name="financial_management_app">Ứng dụng quản lý chi tiêu</string>
    <string name="welcome_to_spendify">Chào mừng đến với Spendify</string>
    <string name="app_description">Trải nghiệm niềm vui quản lý tài chính bằng việc đăng ký trong lần đầu sử dụng</string>
    <string name="register_new_account">ĐĂNG KÝ TÀI KHOẢN MỚI</string>
    <string name="choose_account_root">Chọn loại tài khoản</string>
    <string name="delete_wallet">Xóa ví</string>
    <string name="do_you_want_to_delete_this_wallet">Bạn có chắc chắn xóa ví này không?</string>
    <string name="ok">Ok</string>
    <string name="no">Không</string>
    <string name="create_wallet_successful">Tạo ví thành công!</string>
    <string name="choose_category_type">Chọn loại danh mục</string>
    <string name="last_month">Tháng trước</string>
    <string name="edit_transaction">Chỉnh sửa giao dịch</string>
    <string name="delete_transaction">Xóa bản ghi giao dịch</string>
    <string name="do_you_want_to_delete_this_transaction">Bạn có chắc chắn xóa giao dịch này không?</string>
    <string name="loading_data">Đang tải dữ liệu...</string>
    <string name="error_loading_data">Lấy dữ liệu thất bại!</string>
    <string name="username_or_password_not_correct">Tên đăng nhập hoặc mật khẩu không chính xác</string>
    <string name="not_empty_field">Vui lòng điền đầy đủ thông tin!</string>
    <string name="unknown_error">Lỗi bất định, vui lòng thử lại sau!</string>
    <string name="logging">Đang đăng nhập ...</string>
    <string name="hello">Chào</string>
    <string name="loading">Đang tải...</string>
    <string name="password_not_match">Mật khẩu không khớp!</string>
    <string name="registering">Đang đăng ký ...</string>
    <string name="username_existed">Tên đăng nhập đã tồn tại!</string>
    <string name="no_data">Chưa có dữ liệu!</string>
    <string name="choose_account_type">Chọn loại tài khoản</string>
    <string name="show_balance">Hiển thị số dư</string>
    <string name="updating">Đang cập nhật ...</string>
    <string name="updated_successful">Cập nhật thành công!</string>
    <string name="updated_failed">Cập nhật thất bại!</string>
    <string name="current_password_wrong">Mật khẩu hiện tại không đúng!</string>
    <string name="change_password_failed">Đổi mật khẩu thất bại!</string>
    <string name="check_current_password_failed">Kiểm tra mật khẩu hiện tại thất bại!</string>
    <string name="creating_wallet">Đang tạo ví ...</string>
    <string name="create_wallet_failed">Tạo ví thất bại!</string>
    <string name="deleting_wallet">Đang xóa ...</string>
    <string name="delete_wallet_failed">Xóa ví thất bại!</string>
    <string name="saving">Đang lưu ...</string>
    <string name="create_transaction">Tạo giao dịch</string>
    <string name="date_wrong">Lỗi ngày tháng</string>
    <string name="create_transaction_failed">Tạo mới giao dịch thất bại!</string>
    <string name="creating">Đang tạo ...</string>
    <string name="create_transaction_successful">Tạo thành công!</string>
    <string name="choose_time">Chọn thời gian</string>
    <string name="deleting">Đang xóa ...</string>
    <string name="delete_transaction_failed">Xóa giao dịch thất bại!</string>
    <string name="read_only_transaction">(*) Giao dịch này chỉ được xem</string>
    <string name="delete_user">Xóa người dùng</string>
    <string name="time_error">Lỗi thời gian</string>
    <string name="all">Tất cả</string>
    <string name="do_you_want_to_delete_this_user">Bạn có chắc chắn muốn xóa người dùng này không?</string>
    <string name="delete_user_failed">Xóa người dùng thất bại!</string>
</resources>