<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/spendify"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp">
        <EditText
            android:id="@+id/registerFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/fullname"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:backgroundTint="@color/light_grey"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:backgroundTint="@color/light_grey"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:backgroundTint="@color/light_grey"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_marginHorizontal="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textColor="@color/dark_grey"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/switchToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textColor="@color/primary" />
    </LinearLayout>
</LinearLayout>