<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.DayStatisticFragment">

    <TextView
        android:id="@+id/filterDayYesterday"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/yesterday"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="12dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey" />
    <TextView
        android:id="@+id/filterDayToday"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/today"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="12dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey" />
    <TextView
        android:id="@+id/filterDayOtherDay"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/another_day"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="12dp"/>

</LinearLayout>