<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".activities.EditUserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/adminEditUserAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- Edit fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="24dp">
        <!-- Username -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/adminEditUserUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:hapticFeedbackEnabled="true"
                android:textColor="@color/dark_grey"
                android:editable="false"
                android:textSize="16sp"/>
        </LinearLayout>
        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/adminEditUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:hapticFeedbackEnabled="true"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
        <!-- Full name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showed_name"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/adminEditUserFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:hapticFeedbackEnabled="true"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/adminEditUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:hapticFeedbackEnabled="true"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
        <!-- Career -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/career"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/adminEditUserCareer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:hapticFeedbackEnabled="true"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
        <!-- Gender -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/gender"
                android:textColor="@color/dark_grey" />

            <RadioGroup
                android:id="@+id/adminEditUserRgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/adminEditUserRbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary"
                    android:checked="true"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/male"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/adminEditUserRbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:buttonTint="@color/primary"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/female"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:id="@+id/adminEditUserAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:paddingTop="12dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="6dp">
        <Button
            android:id="@+id/btnDeleteUser"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_user"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnSaveUser"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/primary"
            android:text="@string/update"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>